[gd_scene load_steps=5 format=3 uid="uid://syu2pf7jl5jl"]

[ext_resource type="PackedScene" uid="uid://bonk8egsbphsi" path="res://Scenes/World.tscn" id="1_dexbp"]
[ext_resource type="PackedScene" uid="uid://c5io532rrd1i6" path="res://Scenes/QuestControlUI.tscn" id="2_xuli7"]
[ext_resource type="Script" path="res://Scripts/GeneratorTask.gd" id="3_0rlj4"]

[sub_resource type="BoxShape3D" id="BoxShape3D_32aba"]
size = Vector3(1.99219, 1, 1.70752)

[node name="World" instance=ExtResource("1_dexbp")]

[node name="QuestControl" parent="SubViewport/World" index="5" instance=ExtResource("2_xuli7")]

[node name="InteractText" type="Control" parent="SubViewport/World" index="6"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="InteractText" type="Label" parent="SubViewport/World/InteractText" index="0"]
visible = false
custom_minimum_size = Vector2(50, 50)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -23.0
grow_horizontal = 2
grow_vertical = 0
horizontal_alignment = 1

[node name="TutorialText" type="Control" parent="SubViewport/World" index="7"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TutorialText" type="Label" parent="SubViewport/World/TutorialText" index="0"]
visible = false
custom_minimum_size = Vector2(50, 50)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -23.0
grow_horizontal = 2
grow_vertical = 0
horizontal_alignment = 1

[node name="GeneratorTask" type="Node3D" parent="SubViewport/World" index="8"]
script = ExtResource("3_0rlj4")

[node name="GeneratorArea" type="Area3D" parent="SubViewport/World/GeneratorTask" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.79674, 0.89276, -3.15501)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="SubViewport/World/GeneratorTask/GeneratorArea" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.182617, 0, -0.35376)
shape = SubResource("BoxShape3D_32aba")

[connection signal="body_entered" from="SubViewport/World/GeneratorTask/GeneratorArea" to="SubViewport/World/GeneratorTask" method="_on_generator_area_body_entered"]
[connection signal="body_exited" from="SubViewport/World/GeneratorTask/GeneratorArea" to="SubViewport/World/GeneratorTask" method="_on_generator_area_body_exited"]

[editable path="SubViewport/World/QuestControl"]
